@@ -1,3 +1,7 @@
+Fri Jun 14 10:04:20 2013  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: Properly report errors from saving files
+
 Thu Jun 13 16:42:42 2013  Jiri (George) Lebl <jirka@5z.com>
 
 	* gtkextra/*: copied lots of the files from 3.0.5, only gtkplot3d,
